<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="categoryStatus">Server Status</string>
    <string name="categoryTS">TeamSpeak</string>
    <string name="categoryMapCycle">Map Cycle</string>
    <string name="actionRefresh">Refresh</string>
    <string name="actionLoad">Load</string>

    <string name="app_name">Renegade Clan</string>
    <string name="action_refresh">Refresh</string>

    <string name="title_section1">Status</string>
    <string name="title_section2">TeamSpeak</string>
    <string name="title_section3">Cycle</string>
    <string name="title_section4">Votes</string>
    <string name="title_section5">Bans</string>
    <string name="title_section6">Warnings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mapImageDescription">Map Image</string>
    <string name="lblTimelimit">Timelimit</string>
    <string name="lblMapDesc">Description</string>
    <string name="lblNextMap">Next:</string>
    <string name="lblCurrentMap">Map:</string>
    <string name="lblPlayers">Players:</string>
    <string name="lblMod">Mod:</string>
    <string name="axisTitle">Axis</string>
    <string name="alliesTitle">Allies</string>
    <string name="spectatorsTitle">Spectators</string>
    <string name="connectingTitle">Connecting</string>
    <string name="headerName">Name</string>
    <string name="headerXP">XP</string>
    <string name="headerPing">Ping</string>
    <string name="serverEmpty">Server is empty</string>
    <string name="serverName">Server Name</string>

    <string name="sampleText">Lorem ipsum</string>
    <string name="sampleDate">01/01/15 12:30p</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- Bans -->
    <string name="bans_banner">Banner:</string>
    <string name="bans_expires">Expires:</string>

    <!-- Warnings -->
    <string name="warnings_warner">Warner:</string>

    <!-- Map Votes -->
    <string name="lblTimesPlayed">Times Played</string>
    <string name="lblLastPlayed">Last Played</string>
    <string name="lblVotes">Votes</string>
    <string name="lblMapUsage">Map Usage</string>
    <string name="mapVotes">%1$d / %2$d</string>
    <string name="lastPlayed">%1$d map%2$s ago</string>
    <string name="mapUsage">%.2f%%</string>
    <string name="never">Never</string>

</resources>
