<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mapDetailTable"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:stretchColumns="1"
    android:padding="5dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mapName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/mapImage"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_column="0"
            android:layout_span="1"
            android:contentDescription="@string/mapImageDescription"
            android:cropToPadding="false"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblMapDesc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mapDesc"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/spacer"
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/lblTimelimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTimelimit"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mapTimelimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

    </TableRow>

</TableLayout>