<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/StatusTable"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    tools:context="com.renegade.rc.StatusFragment">

    <TableRow
        android:id="@+id/rowServerName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0">

        <TextView
            android:id="@+id/serverName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_span="2"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/rowServerInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0">

        <ImageView
            android:id="@+id/imgMap"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_column="0"
            android:layout_span="1"
            android:contentDescription="@string/mapImageDescription"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <TableLayout
            android:id="@+id/tableServerInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_span="1"
            android:gravity="center_vertical">

            <TableRow
                android:id="@+id/rowMap"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblCurrentMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/lblCurrentMap"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mapName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:padding="5dp"
                    android:paddingRight="5dp" />
            </TableRow>

            <TableRow
                android:id="@+id/rowNextMap"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblNextMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/lblNextMap"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nextMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />
            </TableRow>

            <TableRow
                android:id="@+id/rowPlayers"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblPlayers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/lblPlayers"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/numPlayers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />
            </TableRow>

            <TableRow
                android:id="@+id/rowMod"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblMod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/lblMod"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />
            </TableRow>

        </TableLayout>

    </TableRow>

    <TableRow
        android:id="@+id/rowServerEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/serverEmpty" />

    </TableRow>

    <TableRow
        android:id="@+id/rowPlayerData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0">

        <ScrollView
            android:id="@+id/scrollPlayerData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_span="2">

            <TableLayout
                android:id="@+id/playerTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:padding="5dp">

                <TableRow
                    android:id="@+id/rowAxisTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textAxisTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_span="3"
                        android:layout_weight="0.0"
                        android:layout_gravity="center"
                        android:textColor="#FF0000"
                        android:text="@string/axisTitle"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowAxisHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_span="1"
                        android:layout_weight="0.65"
                        android:text="@string/headerName"
                        android:singleLine="true"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_span="1"
                        android:layout_weight="0.25"
                        android:text="@string/headerXP"
                        android:singleLine="true"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_span="1"
                        android:layout_weight="0.10"
                        android:text="@string/headerPing"
                        android:singleLine="true"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowAxisSpacer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/spacerAxis"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:layout_column="0"
                        android:layout_span="3" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowAlliesTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textAlliesTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_span="3"
                        android:layout_weight="0.0"
                        android:layout_gravity="center"
                        android:textColor="#0000FF"
                        android:text="@string/alliesTitle"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowAlliesHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_span="1"
                        android:layout_weight="0.65"
                        android:text="@string/headerName"
                        android:singleLine="true"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_span="1"
                        android:layout_weight="0.25"
                        android:text="@string/headerXP"
                        android:singleLine="true"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_span="1"
                        android:layout_weight="0.10"
                        android:text="@string/headerPing"
                        android:singleLine="true"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowAlliesSpacer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/spacerAllies"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:layout_column="0"
                        android:layout_span="3" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowSpectatorsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textSpectatorsTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_span="3"
                        android:layout_weight="0.0"
                        android:layout_gravity="center"
                        android:textColor="#00FF00"
                        android:text="@string/spectatorsTitle"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowSpectatorsHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_span="2"
                        android:layout_weight="0.90"
                        android:text="@string/headerName"
                        android:singleLine="true"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_span="1"
                        android:layout_weight="0.10"
                        android:text="@string/headerPing"
                        android:singleLine="true"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowSpectatorsSpacer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/spacerSpectators"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:layout_column="0"
                        android:layout_span="3" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowConnectingTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textConnectingTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_span="3"
                        android:layout_weight="0.0"
                        android:layout_gravity="center"
                        android:textColor="#FFFF00"
                        android:text="@string/connectingTitle"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowConnectingHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_span="3"
                        android:layout_weight="0.0"
                        android:text="@string/headerName"
                        android:singleLine="true"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowConnectingSpacer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/spacerConnecting"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:layout_column="0"
                        android:layout_span="3" />

                </TableRow>

            </TableLayout>

        </ScrollView>

    </TableRow>

</TableLayout>